--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -74,12 +74,12 @@
               aria-expanded="false">Ofertas<span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-              <li><a routerLink="/Ofertas"><span class="glyphicon glyphicon-search" aria-hidden="true"></span><span>
+              <li><a routerLink="/ofertas"><span class="glyphicon glyphicon-search" aria-hidden="true"></span><span>
                     All</span></a></li>
-              <li><a routerLink="/Ofertas/add"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span><span> Add
+              <li><a routerLink="/ofertas/add"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span><span> Add
                     New</span></a>
               </li>
-              <li><a routerLink="/Ofertas/edit"><span class="glyphicon glyphicon-asterisk"
+              <li><a routerLink="ofertas/:id/edit"><span class="glyphicon glyphicon-asterisk"
                     aria-hidden="true"></span><span> Edit</span></a>
               </li>
             </ul>
