--- a/front/src/app/ofertas/oferta-add/oferta-add.component.html
+++ b/front/src/app/ofertas/oferta-add/oferta-add.component.html
@@ -1,35 +1,42 @@
 <div class="container-fluid">
   <div class="container xd-container">
     <h2>
-      Edit Oferta
+      Añadir Oferta
     </h2>
 
     <form (ngSubmit)="onSubmit(ofertaForm.value)" #ofertaForm="ngForm" class="form-horizontal">
 
       <div class="form-group has-feedback" >
-        <label for="title" class="col-sm-2 control-label">Title</label>
+        <label for="title" class="col-sm-2 control-label">Titulo</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" id="title" [(ngModel)]="oferta.title" minlength="2" required name="title" #title="ngModel"/>       
         </div>
       </div>
       <div class="form-group has-feedback">
-        <label for="description" class="col-sm-2 control-label">Description</label>
+        <label for="description" class="col-sm-2 control-label">Descripción</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" id="description" [(ngModel)]="oferta.description" name="description" minlength="2" required #description="ngModel"/>
         </div>
       </div>
       <div class="form-group has-feedback" >
-        <label for="discount" class="col-sm-2 control-label">Discount</label>
+        <label for="discount" class="col-sm-2 control-label">Descuento</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" id="discount" [(ngModel)]="oferta.discount" name="discount" required #discount="ngModel"/>
         </div>
       </div>
       <div class="form-group has-feedback" >
-        <label for="expireDate" class="col-sm-2 control-label">Expire Date</label>
+        <label for="expireDate" class="col-sm-2 control-label">Fecha de Caducidad</label>
         <div class="col-sm-10">
+          
           <input type="text" class="form-control" id="city" [(ngModel)]="oferta.expireDate" name="expireDate" required #expireDate="ngModel"/>
         </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button class="btn btn-default" type="button" (click)="gotoOfertasList($event)">Back</button>
+            <button class="btn btn-default" type="submit" [disabled]="!ofertaForm.valid">Add Oferta</button>
+          </div>
       </div>
+    </div>
     </form>
   </div>
 </div>
