--- a/front/src/app/ofertas/oferta-edit/oferta-edit.component.html
+++ b/front/src/app/ofertas/oferta-edit/oferta-edit.component.html
@@ -68,10 +68,15 @@
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <button class="btn btn-default" (click)="gotoOfertaDetail(oferta)">Back</button>
+          <button class="btn btn-default" (click)="gotoOfertasList($event)">Back</button>
           <button type="submit" [disabled]="!ofertaForm.valid" class="btn btn-default">Update oferta</button>
         </div>
       </div>
+
+
+ 
+
+
     </form>
   </div>
 </div>
